2000-12-08  Tom Tromey  <tromey@redhat.com>

	* managedwin.itb (ManagedWin::startup): Only open source window
	if it doesn't already exist.

	* toolbar.tcl (create_help_menu): Remove `Cygnus' item.

	* console.itb (Console::invoke): Trim trailing newlines from
	text.

2000-12-07  Tom Tromey  <tromey@redhat.com>

	* managedwin.itb (ManagedWin::reveal): Don't set focus.

	* tclIndex: Rebuilt.
	* interface.tcl (set_exe_name): Save session.
	(gdbtk_quit_check): Save session.
	* session.tcl: New file.
	* srcbar.tcl (create_menu_items): Add menu items to recall old
	sessions.

	* bpwin.itb (BpWin::goto_bp): Handle multiple source windows.
	* srctextwin.itb (SrcTextWin::get_file): New method.
	(SrcTextWin::set_tag_to_stack): New method.
	* srctextwin.ith (get_file): Declare.
	* srcwin.ith (update_hook_init, window_list, pc_window): New
	common variables.
	(_choose_window, choose_and_update, is_fixed, get_file): Declare.
	* srcwin.itb (SrcWin::_choose_window): New method.
	(SrcWin::choose_and_update): Likewise.
	(SrcWin::_update): Renamed from update.  Now private.  Added `loc'
	argument.
	(SrcWin::get_file): New method.
	(SrcWin::is_fixed): Likewise.
	(SrcWin::constructor): Only add update hook once.  Append this
	object to window list.
	(SrcWin::destructor): Don't add update hook.  Remove this object
	from window list.  Clear pc_window if necessary.
	(SrcWin::get_top): New method.
	(SrcWin::_set_tag_to_stack): New method.
	(SrcWin::choose_and_display): New method.

	* srctextwin.itb (SrcTextWin::do_source_popup): Added "Set
	Breakpoint" to popup menu.

	* srcwin.itb (SrcWin::edit): Use uplevel, not eval, to evaluate
	external editor expression.

2000-12-06  Tom Tromey  <tromey@redhat.com>

	* targetselection.itb (TargetSelection::build_win): Add option to
	start xterm.
	* interface.tcl (run_executable): Call tty::create if requested.
	* tty.tcl: New file.

2000-12-02  Tom Tromey  <tromey@redhat.com>

	* console.ith (_set_wrap): Declare.
	(_update_option): Likewise.