@@ -1,3 +1,8 @@
+2000-12-13  Fernando Nasser  <fnasser@redhat.com>
+
+	* session.tcl (session_save): Save target name.
+	(session_load): Restore target name.
+
 2000-12-08  Tom Tromey  <tromey@redhat.com>
 
 	* managedwin.itb (ManagedWin::startup): Only open source window
